--- a/implement-a-complete-web-page/index.css
+++ b/implement-a-complete-web-page/index.css
@@ -15,7 +15,6 @@ body {
 
 #wrapper {
   width: 960px;
-  min-height: 1200px;
   background-color: silver;
   border-radius: var(--general-border-radios);
   padding: 5px;
@@ -26,4 +25,28 @@ body {
     rgb(127, 147, 158)
   );
   box-shadow: 5px 5px 5px black;
+}
+
+#header {
+  background-color: lightseagreen;
+  background: radial-gradient(
+    circle,
+    turquoise 0%,
+    turquoise 13%,
+    navy 30%,
+    turquoise 80%,
+    navy 100%
+  );
+  border-radius: var(--general-border-radios);
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  height: 160px;
+}
+
+#header span {
+  text-shadow: 5px 5px 5px lightgreen, -5px -5px 5px lightgreen,
+    -5px 5px 5px lightgreen, 5px -5px 5px lightgreen;
+  font-size: 73px;
+  font-weight: 900;
 }
