--- a/implement-a-complete-web-page/index.css
+++ b/implement-a-complete-web-page/index.css
@@ -1,5 +1,10 @@
 :root {
   --general-border-radios: 20px;
+  --menu-height: 40px;
+}
+
+.mb-5 {
+  margin-bottom: 5px;
 }
 
 * {
@@ -15,6 +20,7 @@ body {
 
 #wrapper {
   width: 960px;
+  height: 1000px;
   background-color: silver;
   border-radius: var(--general-border-radios);
   padding: 5px;
@@ -49,4 +55,65 @@ body {
     -5px 5px 5px lightgreen, 5px -5px 5px lightgreen;
   font-size: 73px;
   font-weight: 900;
+}
+
+#menu {
+  z-index: 500;
+  position: sticky;
+  top: 0px;
+  margin: -5px 0 0;
+  backface-visibility: hidden;
+  border-radius: var(--general-border-radios);
+}
+
+/* To add an extra space between the menu and the top of the browser */
+#menu::before {
+  content: "";
+  display: block;
+  height: 5px;
+  width: 100%;
+  position: sticky;
+}
+
+#nav-menu {
+  position: relative;
+  z-index: 2;
+}
+
+#nav-menu-list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: var(--menu-height);
+  list-style-type: none;
+}
+
+.nav-menu-link {
+  display: flex;
+  margin: 0 5px 0 5px;
+  background-color: skyblue;
+  background: linear-gradient(75deg, lightgreen, green, lightgreen);
+  width: 200px;
+  height: var(--menu-height);
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+  text-decoration: none;
+  color: black;
+  border-radius: 10px 30px 10px 30px;
+  transition-duration: 1s;
+}
+
+.active {
+  font-weight: 900;
+  transition-duration: 1s;
+  color: greenyellow;
+  text-shadow: 5px 5px 5px black;
+}
+
+.nav-menu-link:hover {
+  font-weight: 900;
+  transition-duration: 1s;
+  color: greenyellow;
+  text-shadow: 5px 5px 5px black;
 }
