--- a/implement-a-complete-web-page/index.css
+++ b/implement-a-complete-web-page/index.css
@@ -16,6 +16,18 @@
   padding-left: 25px;
 }
 
+.pt-10 {
+  padding-top: 10px;
+}
+
+.p-5 {
+  padding: 5px;
+}
+
+.pl-5 {
+  padding-left: 5px;
+}
+
 .mb-5 {
   margin-bottom: 5px;
 }
@@ -33,7 +45,6 @@ body {
 
 #wrapper {
   width: 960px;
-  height: 1000px;
   background-color: silver;
   border-radius: var(--general-border-radios);
   padding: 5px;
@@ -185,3 +196,82 @@ body {
   background-color: maroon;
   transition-duration: 1s;
 }
+
+#posts {
+  width: 414px;
+  background-color: lightslategray;
+  border-radius: var(--general-border-radios);
+}
+
+.post {
+  width: 100%;
+  border-radius: var(--general-border-radios);
+  background-color: white;
+}
+
+.post-header {
+  height: 60px;
+  display: flex;
+  align-items: center;
+  border-radius: var(--general-border-radios) var(--general-border-radios) 0 0;
+  background-color: lightsteelblue;
+  background: linear-gradient(lightsteelblue, lightblue, skyblue);
+}
+
+.post-header-link {
+  display: block;
+  text-decoration: none;
+  color: black;
+  text-shadow: 4px 4px 4px whitesmoke;
+  transition-duration: 1s;
+}
+
+.post-header-link:hover {
+  color: slategray;
+}
+
+.post-date {
+  height: 30px;
+  background-color: lightsteelblue;
+  background: linear-gradient(skyblue, lightsteelblue, lightblue, white);
+  font-weight: 600;
+}
+
+.post-description {
+  width: 100%;
+  max-height: 200px;
+  overflow: hidden;
+}
+
+.post-description p {
+  text-align: justify;
+}
+
+.post-footer {
+  width: 100%;
+  background-color: lightgreen;
+  background: linear-gradient(white, lightgreen, lightseagreen);
+  height: 35px;
+  border-radius: 0 0 var(--general-border-radios) var(--general-border-radios);
+}
+
+.post-link {
+  text-decoration: none;
+  color: black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: 900;
+  width: 150px;
+  height: 25px;
+  background-color: lightcyan;
+  border-radius: 13px 7px 13px 7px;
+  box-shadow: 3px 3px 7px black;
+  transition-duration: 1s;
+}
+
+.post-link:hover {
+  border-radius: 7px 13px 7px 13px;
+  color: darkslategray;
+}
+
