update: footer implemented

--- a/implement-a-complete-web-page/index.css
+++ b/implement-a-complete-web-page/index.css
@@ -332,3 +332,13 @@ body {
 .sidebar-content-list-item > a:hover {
   color: black;
 }
+
+#footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50px;
+  border-radius: var(--general-border-radios);
+  background-color: aquamarine;
+  background: radial-gradient(aquamarine, lightskyblue, turquoise);
+}
