--- a/forms/index.css
+++ b/forms/index.css
@@ -28,6 +28,10 @@ body {
   margin-top: 5px;
 }
 
+.ml-5 {
+  margin-left: 5px;
+}
+
 .p-10 {
   padding: 10px;
 }
@@ -52,6 +56,8 @@ body {
 
 .form-input {
   width: 100%;
+  display: flex;
+  align-items: center;
 }
 
 .textbox {
